index.css
* {
  box-sizing: border-box;
}

html,
body {
  font-family: Poppins;
  margin: 0;
  padding: 0;
  height: 100%;
  width: 100%;
  /* border: 2px solid red; */
}

body {
  /* align-items: center; */
  /* flex-direction: column; */
  border: 2px solid green;
}

.container {
  margin: auto;
  align-items: center;
  width: 80%;
  display: grid;
  border: 2px solid red;
  height: 100%;
  gap: 20px;
}

.supervisor {
  grid-column: 1;
  grid-row: 1/3;
}

.team-builder {
  grid-column: 2;
  grid-row: 1/2;
}

.karma {
  grid-column: 2;
  grid-row: 2/3;
}
.calculator {
  grid-column: 3;
  grid-row: 1/3;
}

.header {
  text-align: center;
  border: 2px solid black;
}

.card {
  border-radius: 10px;
  width: 300px;
  height: 200px;
  border: 2px solid black;
  overflow: hidden;
}

.team-builder::before,
.karma::before,
.supervisor::before,
.calculator::before {
  content: "";
  width: 100%;
  height: 5px;
  display: block;
}

.calculator::before {
  background-color: #2d91f1;
}

.karma::before {
  background-color: #ffb52e;
}

.supervisor::before {
  background-color: #2bb7da;
}
.team-builder::before {
  background-color: #ef4b4c;
}

